[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
]

[project]
name = "durgod"
version = "0.1.0"
description = "scripts for controlling a Durgod Taurus K320 Nebula keyboard"
authors = [
    {name = "Ilia Pozdnyakov", email = "ilia.pozdnyakov@ya.ru"},
]
dependencies = [
    "pyusb>=1.2.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["durgod", "keyboard"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
